# ert_config_parser

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: testing.yml
src/ert_config_parser/: __init__.py  _parse.py
tests/: test_acceptance.py
